--- a/initial/frontend/public/index.html
+++ b/initial/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="C:\Users\rafae\OneDrive\Desktop\Knowledge-WebApp\initial\frontend\src\img\Design sem nome.jpg">
-    <title>Up1n Finder</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
