--- a/initial/frontend/public/index.html
+++ b/initial/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="@/assets/letra-u.png">
+    <link rel="icon" sizes="16/16" href="./asset/letra-u.png" type="image/x-icon">
     <title>Up1n Finder</title>
   </head>
   <body>
